--- a/bibliography-files/syllabus-references.bib
+++ b/bibliography-files/syllabus-references.bib
@@ -78,6 +78,14 @@
   file = {C:\Users\user\Zotero\storage\WREC38IM\Brown - 1998 - Sexual Orientation and Labor Economics.pdf}
 }
 
+@book{chang2018r,
+  title = {R Graphics Cookbook: Practical Recipes for Visualizing Data},
+  author = {Chang, Winston},
+  date = {2018},
+  publisher = {O'Reilly Media},
+  url = {https://r-graphics.org/}
+}
+
 @article{fairlie_etal23,
   title = {Were Small Businesses More Likely to Permanently Close in the Pandemic?},
   author = {Fairlie, Robert and Fossen, Frank M. and Johnsen, Reid and Droboniku, Gentian},
@@ -116,6 +124,7 @@
   date = {2020-05-24},
   publisher = {Independently published},
   location = {Düsseldorf},
+  url = {https://www.urfie.net/},
   abstract = {Introduces the popular, powerful and free programming language and software package RFocus: implementation of standard tools and methods used in econometricsCompatible with "Introductory Econometrics" by Jeffrey M. Wooldridge in terms of topics, organization, terminology and notationCompanion website with full text, all code for download and other goodies: http://urfie.netAlso check out Using Python for Introductory Econometrics: http://upfie.net/Praise: "A very nice resource for those wanting to use R in their introductory econometrics courses." (Jeffrey M. Wooldridge)Using R for Introductory Econometrics is a fabulous modern resource. I know I'm going to be using it with my students, and I recommend it to anyone who wants to learn about econometrics and R at the same time." (David E. Giles in his blog "Econometrics Beat")Topics:A gentle introduction to RSimple and multiple regression in matrix form and using black box routinesInference in small samples and asymptoticsMonte Carlo simulationsHeteroscedasticityTime series regressionPooled cross-sections and panel dataInstrumental variables and two-stage least squaresSimultaneous equation modelsLimited dependent variables: binary, count data, censoring, truncation, and sample selectionFormatted reports and research papers combining R with R Markdown or LaTeX},
   isbn = {9798648424364},
   langid = {english},
@@ -142,6 +151,7 @@
   edition = {1st edition},
   publisher = {{Chapman and Hall/CRC}},
   location = {Boca Raton},
+  url = {https://theeffectbook.net/},
   abstract = {The Effect: An Introduction to Research Design and Causality is about research design, specifically concerning research that uses observational data to make a causal inference. It is separated into two halves, each with different approaches to that subject. The first half goes through the concepts of causality, with very little in the way of estimation. It introduces the concept of identification thoroughly and clearly and discusses it as a process of trying to isolate variation that has a causal interpretation. Subjects include heavy emphasis on data-generating processes and causal diagrams.Concepts are demonstrated with a heavy emphasis on graphical intuition and the question of what we do to data. When we “add a control variable” what does that actually do?Key Features: • Extensive code examples in R, Stata, and Python• Chapters on overlooked topics in econometrics classes: heterogeneous treatment effects, simulation and power analysis, new cutting-edge methods, and uncomfortable ignored assumptions• An easy-to-read conversational tone• Up-to-date coverage of methods with fast-moving literatures like difference-in-differences},
   isbn = {978-1-03-212578-7},
   langid = {english},
@@ -216,6 +226,15 @@
   pagetotal = {740}
 }
 
+@book{wickham_etal23,
+  title = {R for Data Science},
+  author = {Wickham, Hadley and Çetinkaya-Rundel, Mine and Grolemund, Garrett},
+  date = {2023},
+  publisher = {" O'Reilly Media, Inc."},
+  url = {https://r4ds.hadley.nz/},
+  isbn = {1-4920-9736-5}
+}
+
 @book{wooldridge20,
   title = {Introductory Econometrics: A Modern Approach / {{Jeffrey M}}. {{Wooldridge}}.},
   shorttitle = {Introductory Econometrics},
@@ -227,4 +246,20 @@
   isbn = {978-1-337-55886-0},
   langid = {english},
   keywords = {Econometrics; Econometrics}
+}
+
+@book{xie2017dynamic,
+  title = {Dynamic Documents with {{R}} and Knitr},
+  author = {Xie, Yihui},
+  date = {2017},
+  publisher = {{Chapman and Hall/CRC}},
+  url = {https://duhi23.github.io/Analisis-de-datos/Yihue.pdf}
+}
+
+@book{xie2018r,
+  title = {R Markdown: {{The}} Definitive Guide},
+  author = {Xie, Yihui and Allaire, Joseph J and Grolemund, Garrett},
+  date = {2018},
+  publisher = {{Chapman and Hall/CRC}},
+  url = {https://bookdown.org/yihui/rmarkdown/}
 }
